--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="true" />
+        <activity
+            android:name=".ui.favorite.FavoriteActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
